Updated backend security, controllers, auth service, config, and frontend login/signup